Nav text vertical alignment fix

--- a/css/master.css
+++ b/css/master.css
@@ -242,6 +242,7 @@ html {
     transition-duration: .25s !important;
     text-align: center;
     width: 84px !important;
+    align-content: center !important;
 }
 
 .NavButton:hover{
